// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Init About 1`] = `
<div
  className="about-container"
>
  <h1>
    About Page
  </h1>
  <p>
    StormShelters is an application that can provide those in Harris County that have been affected by natural disasters with resources for help and shelter. The website provides information on the different cities in the county, the disasters they were struck by, and different shelter locations nearby. Data sources used: Yelp, FEMA, Wikipedia, Census. Tools used: GitLab repository with CI/CD, Visual Studio Code, JavaScript, HTML/CSS, Postman, Bootstrap Through our research, we have found interesting correlations between data we didn't realize was so closely connected. The most interesting realization was how shelters were concentrated near the areas where many storms take place.
  </p>
  <div
    className="team-members-container"
  />
  <div
    className="statistics"
  >
    <p>
      Total commits: 0
    </p>
    <p>
      Total issues: 0
    </p>
  </div>
  <div
    className="center-text"
  >
    <br />
    <a
      href="https://documenter.getpostman.com/view/29974721/2s9YR6aDwG"
    >
      API Documentation
    </a>
    <br />
    <a
      href="https://gitlab.com/cs373-group5/stormshelters"
    >
      GitLab Repository
    </a>
  </div>
  <div
    className="text-left"
  >
    <br />
    <h2>
      Tools Used:
    </h2>
    <ul>
      <li>
        VS Code: integrated environment for command line and pushing to Git
      </li>
      <li>
        VS Code Liveshare: remotely edit the same project simultaneously
      </li>
      <li>
        Zoom: for remote collaboration
      </li>
      <li>
        AWS Amplify and Route53: Hosting the website directly from the GitLab repository and configuring the different domain provisions (i.e .dev, .amplify, .www)
      </li>
    </ul>
    <h2>
      Data sources:
    </h2>
    <ul>
      <li>
        <a
          href="http://api.weatherapi.com/v1/forecast.json"
        >
          Weather API
        </a>
      </li>
      <li>
        <a
          href="https://fusion.yelp.com"
        >
          Yelp Fusion
        </a>
      </li>
      <li>
        <a
          href="https://developers.google.com/maps/documentation/geocoding/overview"
        >
          GeoCoding API
        </a>
      </li>
      <li>
        <a
          href="https://www.geoapify.com/geocoding-api"
        >
          GeoApify
        </a>
      </li>
    </ul>
    <p>
      Each of these sites provides a RESTful API. For Phase 1, we first analyzed the documentation to find the appropriate endpoints. Then, we scraped the data using a curl request and filtered the data by hand to find the appropriate information. Finally, we added the data to a JSON file so that it could be re-used across different pages.
    </p>
    <br />
  </div>
</div>
`;

exports[`Init App 1`] = `
Array [
  <nav
    className="navbar"
  >
    <ul
      className="nav-list"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/"
        >
          StormShelters
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/about"
        >
          About
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/cities"
        >
          Cities
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/shelter"
        >
          Shelter & Relief
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/pharmacies"
        >
          Pharmacies
        </a>
      </li>
    </ul>
  </nav>,
  <div
    className="home-container"
  >
    <div
      className="bg"
    />
  </div>,
]
`;

exports[`Init CityCArd 1`] = `
<div
  className="about-container"
>
  <h1>
    About Page
  </h1>
  <p>
    StormShelters is an application that can provide those in Harris County that have been affected by natural disasters with resources for help and shelter. The website provides information on the different cities in the county, the disasters they were struck by, and different shelter locations nearby. Data sources used: Yelp, FEMA, Wikipedia, Census. Tools used: GitLab repository with CI/CD, Visual Studio Code, JavaScript, HTML/CSS, Postman, Bootstrap Through our research, we have found interesting correlations between data we didn't realize was so closely connected. The most interesting realization was how shelters were concentrated near the areas where many storms take place.
  </p>
  <div
    className="team-members-container"
  />
  <div
    className="statistics"
  >
    <p>
      Total commits: 0
    </p>
    <p>
      Total issues: 0
    </p>
  </div>
  <div
    className="center-text"
  >
    <br />
    <a
      href="https://documenter.getpostman.com/view/29974721/2s9YR6aDwG"
    >
      API Documentation
    </a>
    <br />
    <a
      href="https://gitlab.com/cs373-group5/stormshelters"
    >
      GitLab Repository
    </a>
  </div>
  <div
    className="text-left"
  >
    <br />
    <h2>
      Tools Used:
    </h2>
    <ul>
      <li>
        VS Code: integrated environment for command line and pushing to Git
      </li>
      <li>
        VS Code Liveshare: remotely edit the same project simultaneously
      </li>
      <li>
        Zoom: for remote collaboration
      </li>
      <li>
        AWS Amplify and Route53: Hosting the website directly from the GitLab repository and configuring the different domain provisions (i.e .dev, .amplify, .www)
      </li>
    </ul>
    <h2>
      Data sources:
    </h2>
    <ul>
      <li>
        <a
          href="http://api.weatherapi.com/v1/forecast.json"
        >
          Weather API
        </a>
      </li>
      <li>
        <a
          href="https://fusion.yelp.com"
        >
          Yelp Fusion
        </a>
      </li>
      <li>
        <a
          href="https://developers.google.com/maps/documentation/geocoding/overview"
        >
          GeoCoding API
        </a>
      </li>
      <li>
        <a
          href="https://www.geoapify.com/geocoding-api"
        >
          GeoApify
        </a>
      </li>
    </ul>
    <p>
      Each of these sites provides a RESTful API. For Phase 1, we first analyzed the documentation to find the appropriate endpoints. Then, we scraped the data using a curl request and filtered the data by hand to find the appropriate information. Finally, we added the data to a JSON file so that it could be re-used across different pages.
    </p>
    <br />
  </div>
</div>
`;

exports[`Init CityCard 1`] = `
<div
  className="about-container"
>
  <h1>
    About Page
  </h1>
  <p>
    StormShelters is an application that can provide those in Harris County that have been affected by natural disasters with resources for help and shelter. The website provides information on the different cities in the county, the disasters they were struck by, and different shelter locations nearby. Data sources used: Yelp, FEMA, Wikipedia, Census. Tools used: GitLab repository with CI/CD, Visual Studio Code, JavaScript, HTML/CSS, Postman, Bootstrap Through our research, we have found interesting correlations between data we didn't realize was so closely connected. The most interesting realization was how shelters were concentrated near the areas where many storms take place.
  </p>
  <div
    className="team-members-container"
  />
  <div
    className="statistics"
  >
    <p>
      Total commits: 0
    </p>
    <p>
      Total issues: 0
    </p>
  </div>
  <div
    className="center-text"
  >
    <br />
    <a
      href="https://documenter.getpostman.com/view/29974721/2s9YR6aDwG"
    >
      API Documentation
    </a>
    <br />
    <a
      href="https://gitlab.com/cs373-group5/stormshelters"
    >
      GitLab Repository
    </a>
  </div>
  <div
    className="text-left"
  >
    <br />
    <h2>
      Tools Used:
    </h2>
    <ul>
      <li>
        VS Code: integrated environment for command line and pushing to Git
      </li>
      <li>
        VS Code Liveshare: remotely edit the same project simultaneously
      </li>
      <li>
        Zoom: for remote collaboration
      </li>
      <li>
        AWS Amplify and Route53: Hosting the website directly from the GitLab repository and configuring the different domain provisions (i.e .dev, .amplify, .www)
      </li>
    </ul>
    <h2>
      Data sources:
    </h2>
    <ul>
      <li>
        <a
          href="http://api.weatherapi.com/v1/forecast.json"
        >
          Weather API
        </a>
      </li>
      <li>
        <a
          href="https://fusion.yelp.com"
        >
          Yelp Fusion
        </a>
      </li>
      <li>
        <a
          href="https://developers.google.com/maps/documentation/geocoding/overview"
        >
          GeoCoding API
        </a>
      </li>
      <li>
        <a
          href="https://www.geoapify.com/geocoding-api"
        >
          GeoApify
        </a>
      </li>
    </ul>
    <p>
      Each of these sites provides a RESTful API. For Phase 1, we first analyzed the documentation to find the appropriate endpoints. Then, we scraped the data using a curl request and filtered the data by hand to find the appropriate information. Finally, we added the data to a JSON file so that it could be re-used across different pages.
    </p>
    <br />
  </div>
</div>
`;

exports[`Init NavBar 1`] = `
<nav
  className="navbar"
>
  <ul
    className="nav-list"
  >
    <li
      className="nav-item"
    >
      <a
        className="nav-link"
        href="/"
      >
        StormShelters
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link"
        href="/about"
      >
        About
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link"
        href="/cities"
      >
        Cities
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link"
        href="/shelter"
      >
        Shelter & Relief
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link"
        href="/pharmacies"
      >
        Pharmacies
      </a>
    </li>
  </ul>
</nav>
`;
